syntax = "proto3";

package io.sandonjacobs.streaming.parking.model;

option java_package = "io.sandonjacobs.streaming.parking.status";
option java_multiple_files = true;

import "parking-garage.proto";
import "vehicle.proto";

message ParkingGarageRowStatus {
  string id = 1;
  string garageId = 2;
  string zoneId = 3;
  string rowId = 4;
  RowStatus carStatus = 5;
  RowStatus handicapStatus = 6;
  RowStatus motorcycleStatus = 7;
}

message RowStatus {
  VehicleType vehicleType = 1;
  int32 capacity = 2;
  int32 occupied = 3;
}